--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "scripts": {
         "clear": "rm -rf dist/ coverage/ .nyc_output/",
         "clear:all": "rm -rf node_modules/ && npm run clear",
-        "test": "mocha",
+        "test": "mocha --sort",
         "test:watch": "mocha --watch",
-        "coverage": "nyc npm run test && nyc report --reporter=text-lvoc | coveralls -v",
+        "coverage": "nyc npm run test && nyc report --reporter=text-lcov | coveralls -v",
         "count": "find . -name '*.js' -not -path './node_modules/*' | xargs wc -l | sort -r",
         "lint": "eslint ."
     },
@@ -22,10 +22,10 @@
     "devDependencies": {
         "chai": "^4.2.0",
         "coveralls": "^3.0.3",
-        "eslint": "^5.11.0",
+        "eslint": "^5.16.0",
         "eslint-config-piecioshka": "^2.0.1",
-        "mocha": "^5.2.0",
-        "nyc": "^13.1.0"
+        "mocha": "^6.1.4",
+        "nyc": "^14.1.0"
     },
     "repository": {
         "type": "git",
