--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: node_js
+
 os:
   - linux
   - osx
   - windows
+
 node_js:
+  - "14"
   - "13"
   - "12"
   - "11"
@@ -12,5 +15,6 @@ node_js:
   - "9"
   - "8"
   - "7"
+
 after_script:
-  - npm run coverage
+  - npm run coveralls
